--- a/src/sass/components/_theme-switcher.scss
+++ b/src/sass/components/_theme-switcher.scss
@@ -1,105 +1,106 @@
 .theme-switcher {
-    padding: 0;
+  padding: 0;
+  cursor: pointer;
 
-    .hidden-checkbox {
-        opacity: 0;
-        pointer-events: none;
-        clip-path: none;
-        position: absolute;
-        overflow: hidden;
-        z-index: -1;
+  .hidden-checkbox {
+    opacity: 0;
+    pointer-events: none;
+    clip-path: none;
+    position: absolute;
+    overflow: hidden;
+    z-index: -1;
+  }
+  &__input:checked + &__button {
+    background-image: var(--stars-gradient);
+  }
+  &__input:checked + &__button::after {
+    transform: translate(-22px);
+    @media screen and (min-width: 768px) {
+      transform: translate(-34px);
     }
-    &__input:checked+&__button {
-        background-image: var(--stars-gradient);
-    }
-    &__input:checked+&__button::after {
-        transform: translate(-22px);
-        @media screen and (min-width: 768px) {
-            transform: translate(-34px);
-        }
-    }
-    &__button {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        position: relative;
-        overflow: hidden;
+  }
+  &__button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    overflow: hidden;
 
-        content: '';
-        width: 38;
-        height: 16px;
-        border-radius: 50px;
-        background-image: var(--btn-gradient);
+    cursor: pointer;
 
-        padding: 2px;
-        border-radius: 50px;
-        transition: background-image 200ms linear;
+    content: '';
+    width: 38;
+    height: 16px;
+    border-radius: 50px;
+    background-image: var(--btn-gradient);
 
-        @media screen and (min-width: 768px) {
-                width: 60;
-                height: 24px;
-                padding: 4px;
-            }
+    padding: 2px;
+    border-radius: 50px;
+    transition: background-image 200ms linear;
 
-        &__icon {
-            position: absolute;
-            fill: transparent;
-            stroke: #fff;
-        }
-        .moon {
-            
-            width: 10px;
-            height: 10px;
-            left: 4px;
-            opacity: 1;
-            transform: translateX(0);
-            transition: transform 100ms ease-in-out, opacity 550ms ease-in;
-
-            @media screen and (min-width: 768px) {
-                width: 14px;
-                height: 14px;
-            }
-        }
-        .sun {
-            opacity: 0;
-            width: 10px;
-            height: 10px;
-            right: 4px;
-            transform: translateX(38);
-            transition: transform 100ms ease-in-out, opacity 550ms ease-in ;
-            
-            
-            @media screen and (min-width: 768px) {
-                width: 14px;
-                height: 14px;
-            }
-        }
+    @media screen and (min-width: 768px) {
+      width: 60;
+      height: 24px;
+      padding: 4px;
     }
-    &__button::after {
-        content: '';
-        position: absolute;
-        left: 24px;
-        top: 2px;
-        width: 12px;
-        height: 12px;
-        background-color: #fff;
-        border-radius: 50%;
-        border-radius: 50px;
-        transition: transform 100ms linear;
 
-        @media screen and (min-width: 768px) {
-            left: 38px;
-            top: 3px;
-            width: 18px;
-            height: 18px;
-        }
+    &__icon {
+      position: absolute;
+      fill: transparent;
+      stroke: #fff;
     }
-    &__input:checked+&__button .moon {
-        opacity: 0;
-        transform: translateX(-38);
+    .moon {
+      width: 10px;
+      height: 10px;
+      left: 4px;
+      opacity: 1;
+      transform: translateX(0);
+      transition: transform 100ms ease-in-out, opacity 550ms ease-in;
+
+      @media screen and (min-width: 768px) {
+        width: 14px;
+        height: 14px;
+      }
     }
-    &__input:checked+&__button .sun {
-        opacity: 1;
-        transform: translateX(0);
+    .sun {
+      opacity: 0;
+      width: 10px;
+      height: 10px;
+      right: 4px;
+      transform: translateX(38);
+      transition: transform 100ms ease-in-out, opacity 550ms ease-in;
+
+      @media screen and (min-width: 768px) {
+        width: 14px;
+        height: 14px;
+      }
     }
-};
+  }
+  &__button::after {
+    content: '';
+    position: absolute;
+    left: 24px;
+    top: 2px;
+    width: 12px;
+    height: 12px;
+    background-color: #fff;
+    border-radius: 50%;
+    border-radius: 50px;
+    transition: transform 100ms linear;
+
+    @media screen and (min-width: 768px) {
+      left: 38px;
+      top: 3px;
+      width: 18px;
+      height: 18px;
+    }
+  }
+  &__input:checked + &__button .moon {
+    opacity: 0;
+    transform: translateX(-38);
+  }
+  &__input:checked + &__button .sun {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
